[package]
authors = ["NeulChan Gong <neulchan.gong@gmail.com>"]
edition = "2018"
name = "tidis"
version = "0.4.1"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tidis/0.4.0/tidis/"
repository = "https://github.com/tokio-rs/tidis"
description = """
An incomplete implementation of a Rust client and server. Used as a
larger example of an idiomatic Tokio application.
"""

[[bin]]
name = "tidis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "tidis-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3.0"
atoi = "0.3.2"
bytes = "1"
structopt = "0.3.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
